tests/ui/bits_param/invalid_param_value_1.stderr
error: encountered invalid value argument for #[bitfield] `bits` parameter
 --> tests/ui/bits_param/invalid_param_value_1.rs:3:19
  |
3 | #[bitfield(bits = true)]
  |                   ^^^^
